I think this is everything.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>repo.me</title>
+    <title>etaTV Repo</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -24,8 +24,8 @@
     <div class="repo-header">
       <div class="container">
         <div class="d-flex align-items-center">
-          <img src="CydiaIcon.png" alt="Repository Icon" />
-          <h1>repo.me</h1>
+          <img src="CydiaIcon@3x.png" alt="etaTV Icon" />
+          <h1>etaTV Repo</h1>
         </div>
       </div>
     </div>
@@ -33,28 +33,8 @@
     <div class="container mb-4">
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title mb-3">repo.me</h5>
-          <p class="card-text mb-4">
-            a modern apt repository template built by the community.
-          </p>
-          <div class="d-flex flex-wrap gap-2">
-            <a class="btn btn-primary" href="sileo://source/https://REPLACEHERE"
-              >Add to Sileo</a
-            >
-            <a
-              class="btn btn-primary"
-              href="zbra://sources/add/https://REPLACEHERE"
-              >Add to Zebra</a
-            >
-            <a class="btn btn-primary" href="apt-repo://https://REPLACEHERE"
-              >Add to Saily</a
-            >
-            <a
-              class="btn btn-primary"
-              href="cydia://url/https://cydia.saurik.com/api/share#?source=https://REPLACEHERE"
-              >Add to Cydia</a
-            >
-          </div>
+          <h5 class="card-title mb-3">About This Repo</h5>
+          <p class="card-text mb-4">etaTV is a general-purpose repository for modern Apple TV jailbreaks, but is pretty much home to only my own tweaks at the moment. Contributions are welcomed, and if you'd like to add your own tvOS tweaks, contact me!</p>
         </div>
       </div>
     </div>
@@ -64,37 +44,13 @@
       <div class="row g-4">
         <div class="col-md-6">
           <div class="card">
-            <div class="card-header">Old Package</div>
+            <div class="card-header">Solaria</div>
             <div class="card-body">
-              <p class="card-text">
-                This is a sample package with minimal information. It also
-                simulates an old package that's incompatible only with iOS lower
-                than 7.0.
-              </p>
-              <a
-                class="btn btn-primary"
-                href="depictions/web/?p=com.example.oldsample"
-                >More info</a
-              >
+              <p class="card-text">Enable Liquid Glass on unsupported Apple TV models running tvOS 26! Performance will be poor.</p>
+              <a class="btn btn-primary" href="depictions/web/?p=cc.forcequit.solaria">More info</a>
             </div>
           </div>
         </div>
-        <div class="col-md-6">
-          <div class="card">
-            <div class="card-header">New Package</div>
-            <div class="card-body">
-              <p class="card-text">
-                This is a sample package with lots of information.
-              </p>
-              <a
-                class="btn btn-primary"
-                href="depictions/web/?p=com.example.newsample"
-                >More info</a
-              >
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
   </body>
 </html>
