--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title mb-3">About This Repo</h5>
-          <p class="card-text mb-4">etaTV is a general-purpose repository for modern Apple TV jailbreaks, but is pretty much home to only my own tweaks at the moment. Contributions are welcomed, and if you'd like to add your own tvOS tweaks, contact me!</p>
+          <p class="card-text mb-4">etaTV is a general-purpose repository for modern Apple TV jailbreaks, but is pretty much home to only my own tweaks at the moment. Contributions are welcomed, and if you'd like to add your own tvOS tweaks, contact me! This repo was forked from repo.me and the source for it is available <a href="https://github.com/forcequitOS/etaTV">here.</a></p>
         </div>
       </div>
     </div>
