Adds Stasis and Stasis Lite

--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
             </div>
           </div>
         </div>
+        <div class="col-md-6">
+          <div class="card">
+            <div class="card-header">Stasis</div>
+            <div class="card-body">
+              <p class="card-text">An app to block OTA software updates on modern tvOS. Requires tvOS 14.0 or newer, supports TrollStore.</p>
+            </div>
+          </div>
+        </div>
     </div>
   </body>
 </html>
